# QuadCopter

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  currentGoals.txt  lastrecord.mat  openni_ii_normal_estimation.cpp  openni_organized_multi_plane_segmentation.cpp  presentation.pptx  son-of-obsidian.vssettings
EKF/: accelorometer noise.xlsx
EmbeddedPlatform/: pcl superbuild fixes.txt
MATLAB/: CompleteKalmanFilter.m  EMKalman.m  HFsync1.mat  KalmanFromFile.asv  KalmanFromFile.m  NoWrongPlanes_290513.mat  NoWrongPlanes_290513.txt  ThalamusHeatup.mat  acc.txt  data_association_test.m  deleteme.m  gyro.txt  importPlanesFromFile.asv  importPlanesFromFile.m  linedup_slow.mat  linedup_slow.txt  modelderive.asv  modelderive.m  notmoving.mat  notmoving3corners2.2.mat  notmoving3corners2.2.txt  planeSort.m  planes290513.mat  planes290513.txt  planesForC.txt  planes_HFSync1.txt  quadtestmodel.slx  quadtestmodel.slx.autosave  quadtestmodel_sfun.mexw64  startatzero222.mat  startatzero222.txt  startup_drift_test.mat
ModifiedFlightSoftware/: main.c
PCL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Matrix.h  PCL_Conncetor.h  Plane.h  PlaneFinding.sln  SerialClass.cpp  SerialClass.h  Vision.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  correction.h  example serial communiation  kalman.cpp  main.cpp  openni_ii_normal_estimation.cpp  pcd_write_test.vcxproj  pcd_write_test.vcxproj.filters
report/: HowToUseBibTEX.txt  Report-blx.bib  Report.run.xml  Report.tex  RtdspProject.tex  biblib.bib  reportSpecBB.txt
(+64 files in other folders)
